added search for contact function and refactored beginning code into start method